mod text for services

--- a/pages/services.html
+++ b/pages/services.html
@@ -162,7 +162,7 @@
                   <div class="u-container-layout u-valign-top u-container-layout-6">
                     <h5 class="u-text u-text-default u-text-5">Ewallet services<br>
                     </h5>
-                    <p class="u-text u-text-6">Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
+                    <p class="u-text u-text-6">Ewallet services provided by Mascom, Orange, Bemobile, FNB, BARCLAYS/ ABSA. feature COMING SOON</p>
                   </div>
                 </div>
               </div>
@@ -176,7 +176,7 @@
                   <div class="u-container-layout u-valign-top u-container-layout-8">
                     <h5 class="u-text u-text-default u-text-7">Where to go?<br>
                     </h5>
-                    <p class="u-text u-text-8">Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
+                    <p class="u-text u-text-8">visit friends, go places, get a ride/ catch public transport. feature COMING SOON</p>
                   </div>
                 </div>
               </div>
