changed home image

--- a/pages/dedicated/Home.html
+++ b/pages/dedicated/Home.html
@@ -254,7 +254,7 @@
         class="u-expanded-width u-shape u-shape-rectangle u-white u-shape-1"
       ></div>
       <img
-        src="../images/hhhh.jpg"
+        src="../images/AI-human.jpg"
         class="u-align-left u-image u-image-1"
         data-image-width="1200"
         data-image-height="801"
