notice for live AI

--- a/pages/dedicated/Home.html
+++ b/pages/dedicated/Home.html
@@ -576,7 +576,8 @@
                   </h3>
                   <p class="u-text u-text-2">
                     I can get anything for you, just say your wish after
-                    activating your mic with the mic button on the right<br />
+                    activating your mic with the mic button on the right (under
+                    maintanance sorry for any incovinience caused)<br />
                   </p>
                 </div>
               </div>
