fixed online shop text

--- a/pages/services.html
+++ b/pages/services.html
@@ -145,9 +145,9 @@
           </span>
                 <div class="u-container-style u-group u-video-cover u-group-2">
                   <div class="u-container-layout u-valign-top u-container-layout-4">
-                    <h5 class="u-text u-text-default u-text-3">Online Shop<br>
+                    <h5 class="u-text u-text-default u-text-3">Online Shopping<br>
                     </h5>
-                    <p class="u-text u-text-4">What is an AI without a shop for you to buy whatever you want? order some food, get new clothes, get new gadgets and other misc services all in 1 place<br>
+                    <p class="u-text u-text-4">Purchase anything you can find on our online store which is well intergrated with most established companies in Botswana countrywide to deliver goods and services at your front door!<br>
                     </p>
                   </div>
                 </div>
