--- a/pages/dedicated/Home.html
+++ b/pages/dedicated/Home.html
@@ -174,9 +174,9 @@
                     >
                   </li>
                   <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="../Services.html"
-                      >services</a
-                    >
+                    <div class="u-button-style u-nav-link">
+                      <a href="../Services.html">services</a>
+                    </div>
                   </li>
                   <li class="u-nav-item">
                     <a class="u-button-style u-nav-link" href="../Shop.html"
