--- a/pages/dedicated/Home.html
+++ b/pages/dedicated/Home.html
@@ -65,7 +65,7 @@
                 u-text-active-palette-1-base
                 u-text-hover-palette-2-base
               "
-              href=""
+              href="#"
               style="padding: 4px 14px; font-size: calc(1em + 8px)"
             >
               <svg><use xlink:href="#menu-hamburger"></use></svg>
@@ -98,7 +98,7 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
-                  href="./Home.html"
+                  href="./dedicated/Home.html"
                   style="padding: 10px 20px"
                   >Home</a
                 >
@@ -124,7 +124,7 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
-                  href="http://kevstar0.io/Services.html"
+                  href="../services.html"
                   style="padding: 10px 20px"
                   >Services</a
                 >
@@ -167,16 +167,15 @@
                       >Home</a
                     >
                   </li>
-
                   <li class="u-nav-item">
                     <a class="u-button-style u-nav-link" href="../Contact.html"
                       >Contact</a
                     >
                   </li>
                   <li class="u-nav-item">
-                    <div class="u-button-style u-nav-link">
-                      <a href="../Services.html">services</a>
-                    </div>
+                    <a class="u-button-style u-nav-link" href="../services.html"
+                      >Services</a
+                    >
                   </li>
                   <li class="u-nav-item">
                     <a class="u-button-style u-nav-link" href="../Shop.html"
