added ewallet page content

--- a/pages/Contact.html
+++ b/pages/Contact.html
@@ -43,8 +43,8 @@
   <body class="u-body">
     <header class="u-clearfix u-header u-header" id="sec-a427">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <a href="./Home.html" class="u-image u-logo u-image-1">
-          <img src="./images/logo.png" class="u-logo-image u-logo-image-1" />
+        <a href="" class="u-image u-logo u-image-1">
+          <img src="../images/logo.png" class="u-logo-image u-logo-image-1" />
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
           <div
@@ -107,20 +107,7 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
-                  href="About.html"
-                  style="padding: 10px 20px"
-                  >About</a
-                >
-              </li>
-              <li class="u-nav-item">
-                <a
-                  class="
-                    u-button-style
-                    u-nav-link
-                    u-text-active-palette-1-base
-                    u-text-hover-palette-2-base
-                  "
-                  href="Contact.html"
+                  href="../Contact.html"
                   style="padding: 10px 20px"
                   >Contact</a
                 >
@@ -133,9 +120,9 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
-                  href="services.html"
+                  href="../services.html"
                   style="padding: 10px 20px"
-                  >services</a
+                  >Services</a
                 >
               </li>
               <li class="u-nav-item">
@@ -146,7 +133,7 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
-                  href="Shop.html"
+                  href="../Shop.html"
                   style="padding: 10px 20px"
                   >Shop</a
                 >
@@ -172,29 +159,22 @@
                   "
                 >
                   <li class="u-nav-item">
-                    <a
-                      class="u-button-style u-nav-link"
-                      href="./dedicated/Home.html"
+                    <a class="u-button-style u-nav-link" href="./Home.html"
                       >Home</a
                     >
                   </li>
                   <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="About.html"
-                      >About</a
-                    >
-                  </li>
-                  <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="Contact.html"
+                    <a class="u-button-style u-nav-link" href="../Contact.html"
                       >Contact</a
                     >
                   </li>
                   <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="services.html"
-                      >services</a
+                    <a class="u-button-style u-nav-link" href="../services.html"
+                      >Services</a
                     >
                   </li>
                   <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="Shop.html"
+                    <a class="u-button-style u-nav-link" href="../Shop.html"
                       >Shop</a
                     >
                   </li>
