--- a/pages/dedicated/Home.html
+++ b/pages/dedicated/Home.html
@@ -232,7 +232,7 @@
         allows me to service you and simultaneiously entertain you! how cool.<br />
         <br />Image from
         <a
-          href="https://freepik.com/photos/people"
+          href=""
           class="
             u-active-none
             u-border-1
