--- a/pages/services.html
+++ b/pages/services.html
@@ -3,8 +3,8 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="INTUITIVE">
-    <meta name="description" content="">
+    <meta name="keywords" content="Connected Botswana">
+    <meta name="description" content="services in Botswana">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
     <title>services</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
