--- a/pages/Contact.html
+++ b/pages/Contact.html
@@ -44,7 +44,7 @@
     <header class="u-clearfix u-header u-header" id="sec-a427">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a href="" class="u-image u-logo u-image-1">
-          <img src="../images/logo.png" class="u-logo-image u-logo-image-1" />
+          <img src="./images/logo.png" class="u-logo-image u-logo-image-1" />
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
           <div
@@ -107,7 +107,7 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
-                  href="../Contact.html"
+                  href="./Contact.html"
                   style="padding: 10px 20px"
                   >Contact</a
                 >
@@ -120,7 +120,7 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
-                  href="../services.html"
+                  href="./services.html"
                   style="padding: 10px 20px"
                   >Services</a
                 >
@@ -133,7 +133,7 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
-                  href="../Shop.html"
+                  href="./Shop.html"
                   style="padding: 10px 20px"
                   >Shop</a
                 >
@@ -159,22 +159,22 @@
                   "
                 >
                   <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="./Home.html"
+                    <a class="u-button-style u-nav-link" href="./dedicated/Home.html"
                       >Home</a
                     >
                   </li>
                   <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="../Contact.html"
+                    <a class="u-button-style u-nav-link" href="./Contact.html"
                       >Contact</a
                     >
                   </li>
                   <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="../services.html"
+                    <a class="u-button-style u-nav-link" href="./services.html"
                       >Services</a
                     >
                   </li>
                   <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="../Shop.html"
+                    <a class="u-button-style u-nav-link" href="./Shop.html"
                       >Shop</a
                     >
                   </li>
