updated nav on everypage

--- a/pages/Contact.html
+++ b/pages/Contact.html
@@ -43,7 +43,7 @@
   <body class="u-body">
     <header class="u-clearfix u-header u-header" id="sec-a427">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <a href="" class="u-image u-logo u-image-1">
+        <a href="./Home.html" class="u-image u-logo u-image-1">
           <img src="./images/logo.png" class="u-logo-image u-logo-image-1" />
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
@@ -107,6 +107,19 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
+                  href="./About.html"
+                  style="padding: 10px 20px"
+                  >About</a
+                >
+              </li>
+              <li class="u-nav-item">
+                <a
+                  class="
+                    u-button-style
+                    u-nav-link
+                    u-text-active-palette-1-base
+                    u-text-hover-palette-2-base
+                  "
                   href="./Contact.html"
                   style="padding: 10px 20px"
                   >Contact</a
@@ -122,7 +135,7 @@
                   "
                   href="./services.html"
                   style="padding: 10px 20px"
-                  >Services</a
+                  >services</a
                 >
               </li>
               <li class="u-nav-item">
@@ -159,7 +172,16 @@
                   "
                 >
                   <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="./dedicated/Home.html"
+                    <a
+                      class="u-button-style u-nav-link"
+                      href="./dedicated/Home.html"
+                      >Home</a
+                    >
+                  </li>
+                  <li class="u-nav-item">
+                    <a
+                      class="u-button-style u-nav-link"
+                      href="./dedicated/Home.html"
                       >Home</a
                     >
                   </li>
