--- a/pages/Shop.html
+++ b/pages/Shop.html
@@ -142,7 +142,7 @@
                   "
                   href="services.html"
                   style="padding: 10px 20px"
-                  >services</a
+                  >Services</a
                 >
               </li>
               <li class="u-nav-item">
@@ -153,9 +153,9 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
-                  href="Shop.html"
+                  href="ewallet.html"
                   style="padding: 10px 20px"
-                  >Shop</a
+                  >Ewallet</a
                 >
               </li>
             </ul>
@@ -179,7 +179,9 @@
                   "
                 >
                   <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="Home.html"
+                    <a
+                      class="u-button-style u-nav-link"
+                      href="./dedicated/Home.html"
                       >Home</a
                     >
                   </li>
@@ -195,12 +197,12 @@
                   </li>
                   <li class="u-nav-item">
                     <a class="u-button-style u-nav-link" href="services.html"
-                      >services</a
+                      >Services</a
                     >
                   </li>
                   <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="Shop.html"
-                      >Shop</a
+                    <a class="u-button-style u-nav-link" href="ewallet.html"
+                      >Ewallet</a
                     >
                   </li>
                 </ul>
