--- a/pages/ewallet.html
+++ b/pages/ewallet.html
@@ -46,147 +46,169 @@
   </head>
   <body class="u-body">
     <header class="u-clearfix u-header u-header" id="sec-a427">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <a href="" class="u-image u-logo u-image-1">
-          <img src="./images/logo.png" class="u-logo-image u-logo-image-1" />
-        </a>
-        <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
-          <div
-            class="menu-collapse"
-            style="font-size: 1rem; letter-spacing: 0px"
-          >
-            <a
-              class="
-                u-button-style
-                u-custom-left-right-menu-spacing
-                u-custom-padding-bottom
-                u-custom-top-bottom-menu-spacing
-                u-nav-link
-                u-text-active-palette-1-base
-                u-text-hover-palette-2-base
-              "
-              href="#"
-              style="padding: 4px 14px; font-size: calc(1em + 8px)"
-            >
-              <svg><use xlink:href="#menu-hamburger"></use></svg>
-              <svg
-                version="1.1"
-                xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink"
-              >
-                <defs>
-                  <symbol
-                    id="menu-hamburger"
-                    viewBox="0 0 16 16"
-                    style="width: 16px; height: 16px"
-                  >
-                    <rect y="1" width="16" height="2"></rect>
-                    <rect y="7" width="16" height="2"></rect>
-                    <rect y="13" width="16" height="2"></rect>
-                  </symbol>
-                </defs>
-              </svg>
-            </a>
-          </div>
-          <div class="u-nav-container">
-            <ul class="u-nav u-unstyled u-nav-1">
-              <li class="u-nav-item">
-                <a
-                  class="
-                    u-button-style
-                    u-nav-link
-                    u-text-active-palette-1-base
-                    u-text-hover-palette-2-base
-                  "
-                  href="./dedicated/Home.html"
-                  style="padding: 10px 20px"
-                  >Home</a
-                >
-              </li>
-              <li class="u-nav-item">
-                <a
-                  class="
-                    u-button-style
-                    u-nav-link
-                    u-text-active-palette-1-base
-                    u-text-hover-palette-2-base
-                  "
-                  href="./Contact.html"
-                  style="padding: 10px 20px"
-                  >Contact</a
-                >
-              </li>
-              <li class="u-nav-item">
-                <a
-                  class="
-                    u-button-style
-                    u-nav-link
-                    u-text-active-palette-1-base
-                    u-text-hover-palette-2-base
-                  "
-                  href="./services.html"
-                  style="padding: 10px 20px"
-                  >Services</a
-                >
-              </li>
-              <li class="u-nav-item">
-                <a
-                  class="
-                    u-button-style
-                    u-nav-link
-                    u-text-active-palette-1-base
-                    u-text-hover-palette-2-base
-                  "
-                  href="./Shop.html"
-                  style="padding: 10px 20px"
-                  >Shop</a
-                >
-              </li>
-            </ul>
-          </div>
-          <div class="u-nav-container-collapse">
+        <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+          <a href="./Home.html" class="u-image u-logo u-image-1">
+            <img src="./images/logo.png" class="u-logo-image u-logo-image-1" />
+          </a>
+          <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
             <div
-              class="
-                u-black
-                u-container-style
-                u-inner-container-layout
-                u-opacity
-                u-opacity-95
-                u-sidenav
-              "
+              class="menu-collapse"
+              style="font-size: 1rem; letter-spacing: 0px"
             >
-              <div class="u-sidenav-overflow">
-                <div class="u-menu-close"></div>
-                <ul
-                  class="
-                    u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2
-                  "
+              <a
+                class="
+                  u-button-style
+                  u-custom-left-right-menu-spacing
+                  u-custom-padding-bottom
+                  u-custom-top-bottom-menu-spacing
+                  u-nav-link
+                  u-text-active-palette-1-base
+                  u-text-hover-palette-2-base
+                "
+                href="#"
+                style="padding: 4px 14px; font-size: calc(1em + 8px)"
+              >
+                <svg><use xlink:href="#menu-hamburger"></use></svg>
+                <svg
+                  version="1.1"
+                  xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
                 >
-                  <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="./dedicated/Home.html"
-                      >Home</a
+                  <defs>
+                    <symbol
+                      id="menu-hamburger"
+                      viewBox="0 0 16 16"
+                      style="width: 16px; height: 16px"
                     >
-                  </li>
-                  <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="./Contact.html"
-                      >Contact</a
-                    >
-                  </li>
-                  <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="./services.html"
-                      >Services</a
-                    >
-                  </li>
-                  <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="./Shop.html"
-                      >Shop</a
-                    >
-                  </li>
-                </ul>
-              </div>
+                      <rect y="1" width="16" height="2"></rect>
+                      <rect y="7" width="16" height="2"></rect>
+                      <rect y="13" width="16" height="2"></rect>
+                    </symbol>
+                  </defs>
+                </svg>
+              </a>
             </div>
-            <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
-          </div>
-        </nav>
-      </div>
-    </header>
+            <div class="u-nav-container">
+              <ul class="u-nav u-unstyled u-nav-1">
+                <li class="u-nav-item">
+                  <a
+                    class="
+                      u-button-style
+                      u-nav-link
+                      u-text-active-palette-1-base
+                      u-text-hover-palette-2-base
+                    "
+                    href="./dedicated/Home.html"
+                    style="padding: 10px 20px"
+                    >Home</a
+                  >
+                </li>
+                <li class="u-nav-item">
+                  <a
+                    class="
+                      u-button-style
+                      u-nav-link
+                      u-text-active-palette-1-base
+                      u-text-hover-palette-2-base
+                    "
+                    href="./About.html"
+                    style="padding: 10px 20px"
+                    >About</a
+                  >
+                </li>
+                <li class="u-nav-item">
+                  <a
+                    class="
+                      u-button-style
+                      u-nav-link
+                      u-text-active-palette-1-base
+                      u-text-hover-palette-2-base
+                    "
+                    href="./Contact.html"
+                    style="padding: 10px 20px"
+                    >Contact</a
+                  >
+                </li>
+                <li class="u-nav-item">
+                  <a
+                    class="
+                      u-button-style
+                      u-nav-link
+                      u-text-active-palette-1-base
+                      u-text-hover-palette-2-base
+                    "
+                    href="./services.html"
+                    style="padding: 10px 20px"
+                    >services</a
+                  >
+                </li>
+                <li class="u-nav-item">
+                  <a
+                    class="
+                      u-button-style
+                      u-nav-link
+                      u-text-active-palette-1-base
+                      u-text-hover-palette-2-base
+                    "
+                    href="./Shop.html"
+                    style="padding: 10px 20px"
+                    >Shop</a
+                  >
+                </li>
+              </ul>
+            </div>
+            <div class="u-nav-container-collapse">
+              <div
+                class="
+                  u-black
+                  u-container-style
+                  u-inner-container-layout
+                  u-opacity
+                  u-opacity-95
+                  u-sidenav
+                "
+              >
+                <div class="u-sidenav-overflow">
+                  <div class="u-menu-close"></div>
+                  <ul
+                    class="
+                      u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2
+                    "
+                  >
+                    <li class="u-nav-item">
+                      <a
+                        class="u-button-style u-nav-link"
+                        href="./dedicated/Home.html"
+                        >Home</a
+                      >
+                    </li>
+                    <li class="u-nav-item">
+                      <a
+                        class="u-button-style u-nav-link"
+                        href="./dedicated/Home.html"
+                        >Home</a
+                      >
+                    </li>
+                    <li class="u-nav-item">
+                      <a class="u-button-style u-nav-link" href="./Contact.html"
+                        >Contact</a
+                      >
+                    </li>
+                    <li class="u-nav-item">
+                      <a class="u-button-style u-nav-link" href="./services.html"
+                        >Services</a
+                      >
+                    </li>
+                    <li class="u-nav-item">
+                      <a class="u-button-style u-nav-link" href="./Shop.html"
+                        >Shop</a
+                      >
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
+            </div>
+          </nav>
+        </div>
+      </header>
