--- a/pages/About.html
+++ b/pages/About.html
@@ -180,8 +180,8 @@
                   <li class="u-nav-item">
                     <a
                       class="u-button-style u-nav-link"
-                      href="./dedicated/Home.html"
-                      >Home</a
+                      href="ewallet.html"
+                      >Ewallet</a
                     >
                   </li>
                   <li class="u-nav-item">
