--- a/pages/dedicated/Home.html
+++ b/pages/dedicated/Home.html
@@ -168,6 +168,11 @@
                     >
                   </li>
                   <li class="u-nav-item">
+                    <a class="u-button-style u-nav-link" href="../About.html"
+                      >About</a
+                    >
+                  </li>
+                  <li class="u-nav-item">
                     <a class="u-button-style u-nav-link" href="../Contact.html"
                       >Contact</a
                     >
