--- a/pages/About.html
+++ b/pages/About.html
@@ -134,7 +134,7 @@
                   "
                   href="./services.html"
                   style="padding: 10px 20px"
-                  >services</a
+                  >Services</a
                 >
               </li>
               <li class="u-nav-item">
