--- a/pages/Contact.html
+++ b/pages/Contact.html
@@ -181,8 +181,8 @@
                   <li class="u-nav-item">
                     <a
                       class="u-button-style u-nav-link"
-                      href="./dedicated/Home.html"
-                      >Home</a
+                      href="About.html"
+                      >About</a
                     >
                   </li>
                   <li class="u-nav-item">
