--- a/pages/About.html
+++ b/pages/About.html
@@ -178,9 +178,7 @@
                     >
                   </li>
                   <li class="u-nav-item">
-                    <a
-                      class="u-button-style u-nav-link"
-                      href="ewallet.html"
+                    <a class="u-button-style u-nav-link" href="ewallet.html"
                       >Ewallet</a
                     >
                   </li>
@@ -255,12 +253,13 @@
                     u-container-layout u-valign-middle u-container-layout-2
                   "
                 >
-                  <h2 class="u-text u-text-1">About Kevstar<br /></h2>
+                  <h2 class="u-text u-text-1">About the AI Pablo<br /></h2>
                   <p class="u-text u-text-2">
-                    Focused into driving this world into an automated world<br />
-                    service delivery is a big factor for companies and
-                    productivity is just a dream when the "system is down". Take
-                    a look at my services<br />.<br />
+                    programmed into driving this world into an automated world
+                    for easier day to day activities for everyone.<br />
+                    Service delivery is a big factor for companies and
+                    individuals making productivity an <em>illusion</em> when
+                    the "system is down". Take a look at my services.<br></br>
                   </p>
                   <a href="" class="u-btn u-button-style u-btn-1">Services</a>
                 </div>
