--- a/pages/dedicated/Home.html
+++ b/pages/dedicated/Home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html style="font-size: 16px">
   <head>
+    <meta name="google-site-verification" content="R03TwZldwg815xFfb-EhMpv0vtklJ3rC-kvSeGlC54Q" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <meta name="keywords" content="The future of tech in Botswana" />
