fixing website tree structure

--- a/dedicated/Home.html
+++ b/dedicated/Home.html
@@ -11,18 +11,18 @@
     <meta name="description" content="" />
     <meta name="page_type" content="np-template-header-footer-from-plugin" />
     <title>Home</title>
-    <link rel="stylesheet" href="../nicepage.css" media="screen" />
-    <link rel="stylesheet" href="./Home.css" media="screen" />
+    <link rel="stylesheet" href="./pages/nicepage.css" media="screen" />
+    <link rel="stylesheet" href="Home.css" media="screen" />
     <script
       class="u-script"
       type="text/javascript"
-      src="../jquery-1.9.1.min.js"
+      src="./pages/jquery-1.9.1.min.js"
       defer=""
     ></script>
     <script
       class="u-script"
       type="text/javascript"
-      src="../nicepage.js"
+      src="./pages/nicepage.js"
       defer=""
     ></script>
     <link
@@ -51,8 +51,11 @@
   <body class="u-body">
     <header class="u-clearfix u-header u-header" id="sec-a427">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <a href="" class="u-image u-logo u-image-1">
-          <img src="../images/logo.png" class="u-logo-image u-logo-image-1" />
+        <a href="https://twitter.com/Kevstar0" class="u-image u-logo u-image-1">
+          <img
+            src="./pages/images/logo.png"
+            class="u-logo-image u-logo-image-1"
+          />
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
           <div
@@ -102,7 +105,7 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
-                  href="./dedicated/Home.html"
+                  href="Home.html"
                   style="padding: 10px 20px"
                   >Home</a
                 >
@@ -115,7 +118,7 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
-                  href="../About.html"
+                  href="./pages/About.html"
                   style="padding: 10px 20px"
                   >About</a
                 >
@@ -128,7 +131,7 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
-                  href="../Contact.html"
+                  href="./pages/Contact.html"
                   style="padding: 10px 20px"
                   >Contact</a
                 >
@@ -141,7 +144,7 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
-                  href="../services.html"
+                  href="./pages/services.html"
                   style="padding: 10px 20px"
                   >Services</a
                 >
@@ -154,7 +157,7 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
-                  href="../Shop.html"
+                  href="./pages/Shop.html"
                   style="padding: 10px 20px"
                   >Shop</a
                 >
@@ -180,27 +183,35 @@
                   "
                 >
                   <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="./Home.html"
+                    <a class="u-button-style u-nav-link" href="Home.html"
                       >Home</a
                     >
                   </li>
                   <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="../About.html"
+                    <a
+                      class="u-button-style u-nav-link"
+                      href="./pages/About.html"
                       >About</a
                     >
                   </li>
                   <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="../Contact.html"
+                    <a
+                      class="u-button-style u-nav-link"
+                      href="./pages/Contact.html"
                       >Contact</a
                     >
                   </li>
                   <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="../services.html"
+                    <a
+                      class="u-button-style u-nav-link"
+                      href="./pages/services.html"
                       >Services</a
                     >
                   </li>
                   <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="../Shop.html"
+                    <a
+                      class="u-button-style u-nav-link"
+                      href="./pages/Shop.html"
                       >Shop</a
                     >
                   </li>
@@ -236,7 +247,7 @@
         or our database it'll ask you if it should search for it, download &
         install it for you!
         <a
-          href="../services.html"
+          href="./pages/services.html"
           class="
             u-border-1
             u-border-active-palette-2-light-3
@@ -275,7 +286,7 @@
         class="u-expanded-width u-shape u-shape-rectangle u-white u-shape-1"
       ></div>
       <img
-        src="../images/AI-human.jpg"
+        src="./pages/images/AI-human.jpg"
         class="u-align-left u-image u-image-1"
         data-image-width="1200"
         data-image-height="801"
@@ -403,7 +414,7 @@
               </div>
               <h5 class="u-text u-text-6">Smart schools & businesses</h5>
               <a
-                href="../About.html"
+                href=".pages/About.html"
                 class="
                   u-active-none
                   u-border-2
