--- a/dedicated/pages/About.html
+++ b/dedicated/pages/About.html
@@ -42,7 +42,7 @@
   <body class="u-body">
     <header class="u-clearfix u-header u-header" id="sec-a427">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <a href="./Home.html" class="u-image u-logo u-image-1">
+        <a href="../Home.html" class="u-image u-logo u-image-1">
           <img src="./images/logo.png" class="u-logo-image u-logo-image-1" />
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
@@ -93,7 +93,7 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
-                  href="./dedicated/Home.html"
+                  href="../Home.html"
                   style="padding: 10px 20px"
                   >Home</a
                 >
@@ -106,7 +106,7 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
-                  href="./About.html"
+                  href="About.html"
                   style="padding: 10px 20px"
                   >About</a
                 >
@@ -119,7 +119,7 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
-                  href="./Contact.html"
+                  href="Contact.html"
                   style="padding: 10px 20px"
                   >Contact</a
                 >
@@ -132,7 +132,7 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
-                  href="./services.html"
+                  href="services.html"
                   style="padding: 10px 20px"
                   >Services</a
                 >
@@ -145,7 +145,7 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
-                  href="./Shop.html"
+                  href="Shop.html"
                   style="padding: 10px 20px"
                   >Shop</a
                 >
@@ -173,27 +173,27 @@
                   <li class="u-nav-item">
                     <a
                       class="u-button-style u-nav-link"
-                      href="./dedicated/Home.html"
+                      href="../Home.html"
                       >Home</a
                     >
                   </li>
                   <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="ewallet.html"
-                      >Ewallet</a
+                    <a class="u-button-style u-nav-link" href="About.html"
+                      >About</a
                     >
                   </li>
                   <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="./Contact.html"
+                    <a class="u-button-style u-nav-link" href="Contact.html"
                       >Contact</a
                     >
                   </li>
                   <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="./services.html"
+                    <a class="u-button-style u-nav-link" href="services.html"
                       >Services</a
                     >
                   </li>
                   <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="./Shop.html"
+                    <a class="u-button-style u-nav-link" href="Shop.html"
                       >Shop</a
                     >
                   </li>
@@ -255,13 +255,10 @@
                 >
                   <h2 class="u-text u-text-1">About the AI Pablo<br /></h2>
                   <p class="u-text u-text-2">
-                    programmed into driving this world into an automated world
-                    for easier day to day activities for everyone.<br />
-                    Service delivery is a big factor for companies and
-                    individuals making productivity an <em>illusion</em> when
-                    the "system is down". Take a look at my services.<br></br>
+                    programmed into connecting Batswana to help them find their full potential with high online encryption <em>protecting</em> them from online dangers such as hackers nor the govt because this website and it's children apps are run by a single AI created by an unknown entity
+                    meaning to say the AI as a digital software hosted online with access to the entire web has no need valid reason to sell or disribute your personal data. Buy or sell any kinds of goods on Kevstar, connect with brands, potential clients and partners through Kevstar!<br></br>
                   </p>
-                  <a href="" class="u-btn u-button-style u-btn-1">Services</a>
+                  <a href="" class="u-btn u-button-style u-btn-1">Get started</a>
                 </div>
               </div>
             </div>
