--- a/dedicated/pages/Contact.html
+++ b/dedicated/pages/Contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
-    <meta name="keywords" content="" />
+    <meta name="keywords" content="Kevstar's author" />
     <meta name="description" content="" />
     <meta name="page_type" content="np-template-header-footer-from-plugin" />
     <title>Contact</title>
@@ -43,7 +43,7 @@
   <body class="u-body">
     <header class="u-clearfix u-header u-header" id="sec-a427">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <a href="./Home.html" class="u-image u-logo u-image-1">
+        <a href="../Home.html" class="u-image u-logo u-image-1">
           <img src="./images/logo.png" class="u-logo-image u-logo-image-1" />
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
@@ -94,7 +94,7 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
-                  href="./dedicated/Home.html"
+                  href="../Home.html"
                   style="padding: 10px 20px"
                   >Home</a
                 >
@@ -107,7 +107,7 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
-                  href="./About.html"
+                  href="About.html"
                   style="padding: 10px 20px"
                   >About</a
                 >
@@ -120,7 +120,7 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
-                  href="./Contact.html"
+                  href="Contact.html"
                   style="padding: 10px 20px"
                   >Contact</a
                 >
@@ -133,7 +133,7 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
-                  href="./services.html"
+                  href="services.html"
                   style="padding: 10px 20px"
                   >Services</a
                 >
@@ -146,7 +146,7 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
-                  href="./Shop.html"
+                  href="Shop.html"
                   style="padding: 10px 20px"
                   >Shop</a
                 >
@@ -174,7 +174,7 @@
                   <li class="u-nav-item">
                     <a
                       class="u-button-style u-nav-link"
-                      href="./dedicated/Home.html"
+                      href="../Home.html"
                       >Home</a
                     >
                   </li>
@@ -186,17 +186,17 @@
                     >
                   </li>
                   <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="./Contact.html"
+                    <a class="u-button-style u-nav-link" href="Contact.html"
                       >Contact</a
                     >
                   </li>
                   <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="./services.html"
+                    <a class="u-button-style u-nav-link" href="services.html"
                       >Services</a
                     >
                   </li>
                   <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="./Shop.html"
+                    <a class="u-button-style u-nav-link" href="Shop.html"
                       >Shop</a
                     >
                   </li>
