--- a/dedicated/pages/Shop.html
+++ b/dedicated/pages/Shop.html
@@ -50,7 +50,7 @@
   <body class="u-body u-overlap">
     <header class="u-clearfix u-header u-header" id="sec-a427">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <a href="./dedicated/Home.html" class="u-image u-logo u-image-1">
+        <a href="../Home.html" class="u-image u-logo u-image-1">
           <img src="./images/logo.png" class="u-logo-image u-logo-image-1" />
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
@@ -101,7 +101,7 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
-                  href="./dedicated/Home.html"
+                  href="../Home.html"
                   style="padding: 10px 20px"
                   >Home</a
                 >
@@ -153,9 +153,9 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
-                  href="ewallet.html"
+                  href="Shop.html"
                   style="padding: 10px 20px"
-                  >Ewallet</a
+                  >Shop</a
                 >
               </li>
             </ul>
@@ -179,9 +179,7 @@
                   "
                 >
                   <li class="u-nav-item">
-                    <a
-                      class="u-button-style u-nav-link"
-                      href="./dedicated/Home.html"
+                    <a class="u-button-style u-nav-link" href="../Home.html"
                       >Home</a
                     >
                   </li>
@@ -201,8 +199,8 @@
                     >
                   </li>
                   <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="ewallet.html"
-                      >Ewallet</a
+                    <a class="u-button-style u-nav-link" href="Shop.html"
+                      >Shop</a
                     >
                   </li>
                 </ul>
